# vivuscoin

./: .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libvivuscoinconsensus.pc.in
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  (+108 more)
src/bench/: .gitignore  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_vivuscoin.cpp  block_assemble.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  duplicate_inputs.cpp  examples.cpp  gcs_filter.cpp  lockedpool.cpp  mempool_eviction.cpp  merkle_root.cpp  prevector.cpp  rollingbloom.cpp  verify_script.cpp
src/compat/: assumptions.h  byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_shani.cpp  sha256_sse4.cpp  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/crypto/ctaes/: README.md
src/index/: base.cpp  base.h  txindex.cpp  txindex.h
src/interfaces/: README.md  chain.cpp  chain.h  handler.cpp  handler.h  node.cpp  node.h  wallet.cpp  wallet.h
src/node/: transaction.cpp  transaction.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  main.cpp  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  (+76 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: vivuscoin_af.ts  vivuscoin_af_ZA.ts  vivuscoin_am.ts  vivuscoin_ar.ts  vivuscoin_be_BY.ts  vivuscoin_bg.ts  vivuscoin_bg_BG.ts  vivuscoin_ca.ts  vivuscoin_ca@valencia.ts  vivuscoin_ca_ES.ts  vivuscoin_cs.ts  vivuscoin_cy.ts  vivuscoin_da.ts  vivuscoin_de.ts  vivuscoin_el.ts  vivuscoin_el_GR.ts  vivuscoin_en.ts  vivuscoin_en_GB.ts  vivuscoin_eo.ts  vivuscoin_es.ts  vivuscoin_es_AR.ts  vivuscoin_es_CL.ts  vivuscoin_es_CO.ts  vivuscoin_es_DO.ts  vivuscoin_es_ES.ts  vivuscoin_es_MX.ts  vivuscoin_es_UY.ts  vivuscoin_es_VE.ts  vivuscoin_et.ts  vivuscoin_et_EE.ts  vivuscoin_eu_ES.ts  vivuscoin_fa.ts  vivuscoin_fa_IR.ts  vivuscoin_fi.ts  vivuscoin_fr.ts  vivuscoin_fr_CA.ts  vivuscoin_fr_FR.ts  vivuscoin_gl.ts  vivuscoin_he.ts  vivuscoin_hi_IN.ts  (+53 more)
src/qt/res/: vivuscoin-qt-res.rc
src/qt/test/: Makefile  addressbooktests.cpp  apptests.cpp  (+15 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  register.h  server.cpp  server.h  util.cpp  util.h
src/script/: descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  vivuscoinconsensus.cpp  vivuscoinconsensus.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockfilter_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_properties.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  (+33 more)
src/util/: bip32.cpp  bip32.h  bytevectorhash.cpp  bytevectorhash.h  memory.h  moneystr.cpp  moneystr.h  strencodings.cpp  strencodings.h  system.cpp  system.h  time.cpp  time.h
src/wallet/: coincontrol.cpp  coincontrol.h  coinselection.cpp  coinselection.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  fees.cpp  fees.h  init.cpp  psbtwallet.cpp  psbtwallet.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  wallettool.h  walletutil.cpp  walletutil.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h
(+406 files in other folders)
